# stellar-blacklist-oracle

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
backend/api/: package.json
backend/api/src/: index.ts
backend/api/src/__tests__/: api.test.ts
backend/indexer/: package.json
backend/indexer/src/: index.ts
backend/indexer/src/__tests__/: indexer.test.ts
backend/oracle-signer/: package.json
backend/oracle-signer/src/: index.ts  signer.ts
backend/oracle-signer/src/__tests__/: signer.test.ts
backend/threat-engine/: package.json
backend/threat-engine/src/: index.ts  scorer.ts
backend/threat-engine/src/__tests__/: scorer.test.ts
contracts/blacklist-oracle/: Cargo.toml
contracts/blacklist-oracle/src/: lib.rs
contracts/blacklist-oracle/test_snapshots/tests/: test_add_and_check.1.json  test_remove_entry.1.json  test_unknown_issuer_score_zero.1.json
docs/: api.md  architecture.md
sdk/js/: package.json
sdk/js/src/: index.ts
sdk/js/src/__tests__/: client.test.ts
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
validator-node/: package.json
validator-node/src/: index.ts
validator-node/src/__tests__/: validator.test.ts
wallet-demo/: package.json  tsconfig.json
wallet-demo/src/: index.ts
wallet-demo/src/__tests__/: wallet.test.ts
